--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,53 @@
-#配置数据库链接
+#\u914D\u7F6E\u6570\u636E\u5E93\u94FE\u63A5
 spring.datasource.url=jdbc:mysql://47.107.255.107:3306/springboot?useUnicode=true&amp;characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-#页面热加载
+#\u9875\u9762\u70ED\u52A0\u8F7D
 spring.thymeleaf.cache=false
 
-#端口
-spring.prot=
+#\u7AEF\u53E3
+spring.prot=80
 
-#spring boot整合mybatis框架
-#加载mybatis配置文件
+#spring boot\u6574\u5408mybatis\u6846\u67B6
+#\u52A0\u8F7Dmybatis\u914D\u7F6E\u6587\u4EF6
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
-#加载mybatis 映射mapper类的xml文件
+#\u52A0\u8F7Dmybatis \u6620\u5C04mapper\u7C7B\u7684xml\u6587\u4EF6
 mybatis.mapper-locations=classpath:com/wt/wata/mapper/*/*Mapper.xml
-#定义别名
+#\u5B9A\u4E49\u522B\u540D
 mybatis.type-aliases-package=com.wt.wata
 
 
-#配置Thymeleaf模板引擎
+#\u914D\u7F6EThymeleaf\u6A21\u677F\u5F15\u64CE
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 
-#设置时间
+#\u8BBE\u7F6E\u65F6\u95F4
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
-#设定静态资源文件路径
+#\u8BBE\u5B9A\u9759\u6001\u8D44\u6E90\u6587\u4EF6\u8DEF\u5F84
 spring.mvc.static-path-pattern=/static/**
+
+#\u6DFB\u52A0redis\u76F8\u5173\u914D\u7F6E
+# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
+spring.redis.database=0
+# Redis\u670D\u52A1\u5668\u5730\u5740
+spring.redis.host=172.0.0.1
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
+spring.redis.port=6379
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
+spring.redis.password=
+# \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.max-active=200
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.max-wait=-1ms
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+spring.redis.jedis.pool.max-idle=10
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+spring.redis.jedis.pool.min-idle=0
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
+spring.redis.lettuce.shutdown-timeout=30000ms
