优化工具类：加入空指针验证、优化内容非空验证

--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,8 @@
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <!-- end -->
     </dependencies>
