添加文件上传工具类、微信公众号登陆工具类型

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,38 @@ spring.mvc.static-path-pattern=/static/**
 #spring.redis.jedis.pool.min-idle=0
 # \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 #spring.redis.lettuce.shutdown-timeout=30000ms
+
+
+#============================================= \u5FAE\u4FE1\u516C\u4F17\u53F7\u57FA\u672C\u914D\u7F6E =====================================================#
+#   \u5FAE\u4FE1appId
+wx.appId=wx7f7b147ede723e1a
+#   \u5FAE\u4FE1appSecret
+wx.appSecret=d7f4332e2be0930d90c0abddb37a6299
+
+#=============================================     \u8DF3\u8F6C\u914D\u7F6E    =======================================================#
+#  \u56DE\u8C03\u57DF\u540D
+server.home=http://www.rymeng.com/
+
+#\u5047\u8BBE\u524D\u7AEFhtml\u6587\u4EF6\u653E\u5728tomcat\u7684wepApps\u76EE\u5F55\u4E0B\uFF0C\u53EBhtml
+#   \u5E73\u53F0\u5F00\u53D1     A1
+menu.A1=html/pingTaiKaiFa.html
+#   app\u5F00\u53D1     A2
+menu.A2=html/appKaiFa.html
+#   \u5B98\u65B9\u7F51\u7AD9    B1
+menu.B1=html/guanFang.html
+
+
+#==================================================== \u6587\u4EF6\u4E0A\u4F20\u914D\u7F6E =====================================================#
+#\u4E0A\u4F20\u6587\u4EF6\u5927\u5C0F\u9650\u5236
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=200MB
+#\u6587\u4EF6\u8BBF\u95EE\u5730\u5740
+file.static-access-path=/api/file/**
+#\u6587\u4EF6\u5B58\u653E\u5730\u5740
+file.upload-folder=d://uploadFiles/
+
+#\u4E0A\u4F20\u6587\u4EF6\u683C\u5F0F\u9650\u5236
+images.file-format=BMP-JPEG-GIF-PSD-PNG-TIFF-TGA-EPS-JPG
+video.file-format=AVI-WMV-RM-RMVB-MPEG1-MPEG2-MPEG4-MP4-3GP-ASF-SWF-VOB-DAT-MOV-M4V-FLV-F4V-MKV-MTS-TS
+word.file-format=DOC-DOCX
+table.file-format=XLS-XLSX
