--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,31 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <!-- end -->
+
+        <!--图片压缩-->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
+        <!--视频工具 start-->
+        <dependency>
+            <groupId>it.sauronsoftware.jave</groupId>
+            <artifactId>jave-1.0.2</artifactId>
+            <version>3.3.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/lib/jave-1.0.2.jar</systemPath>
+        </dependency>
+        <!--视频工具 end-->
+        <!--跨域问题 start-->
+        <!-- https://mvnrepository.com/artifact/com.thetransactioncompany/cors-filter -->
+        <dependency>
+            <groupId>com.thetransactioncompany</groupId>
+            <artifactId>cors-filter</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <!--跨域问题 end-->
+
     </dependencies>
 
     <build>
